SERVER-6058 Factor out date to UTC handling code and use in mongoexport