src/mongo/db/pipeline/expression.cpp
@@ -1437,9 +1437,7 @@ namespace {
 
     Value ExpressionMillisecond::evaluateInternal(const Variables& vars) const {
         Value date(vpOperand[0]->evaluateInternal(vars));
-        const int ms = date.coerceToDate() % 1000LL;
-        // adding 1000 since dates before 1970 would have negative ms
-        return Value(ms >= 0 ? ms : 1000 + ms);
+        return Value(extractMillisPortion(date.coerceToDate()));
     }
 
     REGISTER_EXPRESSION("$millisecond", ExpressionMillisecond::parse);
